DEVDOCS-12452 fixing order form text color (#141)

--- a/demo_documents/order_form.html
+++ b/demo_documents/order_form.html
@@ -29,7 +29,7 @@ Candy bonbon pastry jujubes lollipop wafer biscuit biscuit. Topping brownie sesa
             <tr>
                 <td style="padding: 9px 8px 0;border-bottom: 1px solid #667;">Harmonica</td>
                 <td style="padding: 9px 8px 0;border-bottom: 1px solid #667;">
-                    <span style="color:white;">/l1q/</span>
+                    <span style="color:black;">/l1q/</span>
                 </td>
                 <td style="padding: 9px 8px 0;border-bottom: 1px solid #667;">$5</td>
                 <td style="padding: 9px 8px 0;border-bottom: 1px solid #667;">
@@ -39,7 +39,7 @@ Candy bonbon pastry jujubes lollipop wafer biscuit biscuit. Topping brownie sesa
             <tr>
                 <td style="padding: 9px 8px 0;border-bottom: 1px solid #667;">Xylophone</td>
                 <td style="padding: 9px 8px 0;border-bottom: 1px solid #667;">
-                    <span style="color:white;">/l2q/</span>
+                    <span style="color:black;">/l2q/</span>
                 </td>
                 <td style="padding: 9px 8px 0;border-bottom: 1px solid #667;">$150</td>
                 <td style="padding: 9px 8px 0;border-bottom: 1px solid #667;">
